<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>otos_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ttttghghnb554z@outlook.jp">taiga</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rw_common_util</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
