<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ultra_object_detection</name>
  <version>1.0.0</version>
  <description>ml based object detection</description>
  <maintainer email="ttttghghnb554z@outlook.jp">taiga</maintainer>
  <license>Apatch-2.0</license>

  <depend>bboxes_ex_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
